refactor: FollowRepositoryTest 수정
- getFirst()를 get(0)로 변경

Resolves: #85